@@ -3,7 +3,7 @@
 /*
  *  LMS version 1.11-git
  *
- *  (C) Copyright 2001-2016 LMS Developers
+ *  (C) Copyright 2001-2019 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -24,7 +24,99 @@
  *  $Id$
  */
 
+use setasign\Fpdi\Tcpdf\Fpdi;
+use setasign\Fpdi\PdfParser\StreamReader;
+
 global $LMS, $SESSION, $SMARTY, $layout;
+global $invoice_type, $type, $document, $classname;
+
+function try_generate_archive_invoices($ids) {
+	global $LMS, $SESSION, $invoice_type, $type, $document, $classname;
+
+	$SMARTY = LMSSmarty::getInstance();
+
+	$archive_stats = $LMS->GetFinancialDocumentArchiveStats($ids);
+
+	if (($invoice_type == 'pdf' && ($archive_stats['html'] > 0 || $archive_stats['rtype'] == 'html'))
+		|| ($invoice_type == 'html' && ($archive_stats['pdf'] > 0 || $archive_stats['rtype'] == 'pdf')))
+		die('Currently you can only print many documents of type text/html or application/pdf!');
+
+	if (!empty($archive_stats) && $archive_stats['archive'] > 0 && $type != trans('DUPLICATE')) {
+		$attachment_name = 'invoices.' . ($invoice_type == 'pdf' ? 'pdf' : 'html');
+		header('Content-Type: ' . ($invoice_type == 'pdf' ? 'application/pdf' : 'text/html'));
+		header('Content-Disposition: attachment; filename="' . $attachment_name . '"');
+		header('Pragma: public');
+
+		if ($invoice_type == 'pdf') {
+			$pdf = new Fpdi();
+			$pdf->setPrintHeader(false);
+			$pdf->setPrintFooter(false);
+		}
+
+		$i = 0;
+
+		foreach ($ids as $idx => $invoiceid) {
+			if ($LMS->isArchiveDocument($invoiceid)) {
+				$file = $LMS->GetArchiveDocument($invoiceid);
+
+				if ($file['document']['customerid'] != $SESSION->id)
+					continue;
+
+				if (!$file['document']['published'])
+					$LMS->PublishDocuments($invoiceid);
+			} else {
+				if (!$document)
+					if ($invoice_type == 'pdf')
+						$document = new $classname(trans('Invoices'));
+					else
+						$document = new LMSHtmlInvoice($SMARTY);
+
+				$invoice = $LMS->GetInvoiceContent($invoiceid);
+
+				if ($invoice['customerid'] != $SESSION->id)
+					continue;
+
+				$invoice['type'] = $type;
+
+				$document->Draw($invoice);
+
+				if (!$invoice['published'])
+					$LMS->PublishDocuments($invoice['id']);
+
+				$file['data'] = $document->WriteToString();
+
+				unset($document);
+				$document = null;
+			}
+
+			$LMS->PublishDocuments($invoiceid);
+
+			if ($invoice_type == 'pdf') {
+				$pageCount = $pdf->setSourceFile(StreamReader::createByString($file['data']));
+				for ($pageNo = 1; $pageNo <= $pageCount; $pageNo++) {
+					// import a page
+					$templateId = $pdf->importPage($pageNo);
+					// get the size of the imported page
+					$size = $pdf->getTemplateSize($templateId);
+
+					$pdf->AddPage($size['orientation'], $size);
+
+					// use the imported page
+					$pdf->useTemplate($templateId);
+				}
+			} else {
+				echo $file['data'];
+				if ($idx < count($ids) - 1)
+					echo '<div style="page-break-after: always;">&nbsp;</div>';
+			}
+		}
+
+		if ($invoice_type == 'pdf')
+			$pdf->Output();
+
+		die;
+	}
+}
 
 $type = ConfigHelper::checkConfig('userpanel.invoice_duplicate') ? trans('DUPLICATE') : trans('ORIGINAL');
 
@@ -58,6 +150,8 @@ if(!empty($_POST['inv']))
 {
 	$layout['pagetitle'] = trans('Invoices');
 
+	try_generate_archive_invoices(array_keys($_POST['inv']));
+
 	$count = count($_POST['inv']);
 	$i = 0;
 	foreach (array_keys($_POST['inv']) as $key) {
@@ -90,7 +184,7 @@ if(!empty($_POST['inv']))
 	if ($invoice['customerid'] != $SESSION->id)
 		die;
 
-	if ($invoice['archived']) {
+	if ($invoice['archived'] && $type != trans('DUPLICATE')) {
 		$invoice = $LMS->GetArchiveDocument($_GET['id']);
 		if ($invoice) {
 			header('Content-Type: ' . $invoice['content-type']);
