@@ -232,6 +232,7 @@ version ?.??.?? (????-??-??):
   - enhancement: userpanel: allow to customize web browser shortcut icon [chilan]
   - enhancement: allow to filter invoice list by number plans [chilan]
   - enhancement: added support for archiving documents [chilan]
+  - enhancement: support of financial document archivization [chilan]
 
 version 1.11.23 (2018-03-21):
 
